adjust to suit java 8